fix: Align ad sidebars with converter card instead of title

--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ body {
     display: none;
     width: 160px;
     flex-shrink: 0;
-    margin-top: 80px;
+    margin-top: 0px;
 }
 
 @media (min-width: 1100px) {
